// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should render card 1`] = `
<div
  className="sc-AxirZ bnGNSL"
>
  <div
    className="sc-AxiKw wDwik"
  >
    <div
      className="sc-AxhUy fNfuCs"
    >
      
    </div>
  </div>
</div>
`;

exports[`Card should render card with children 1`] = `
<div
  className="sc-AxirZ bnGNSL"
>
  <div
    className="sc-AxiKw wDwik"
  >
    <div
      className="sc-AxhUy fNfuCs"
    >
      Children textual content
    </div>
  </div>
</div>
`;

exports[`Card should render card with icon 1`] = `
<div
  className="sc-AxirZ bnGNSL"
>
  <div
    className="sc-AxiKw wDwik"
  >
    <span
      className="sc-AxjAm jnaJRY lni lni-users"
    />
    <h3
      className="sc-AxhCb ICwhD"
    >
      Users
    </h3>
    <div
      className="sc-AxhUy fNfuCs"
    >
      
    </div>
  </div>
</div>
`;

exports[`Card should render card with icon and children 1`] = `
<div
  className="sc-AxirZ bnGNSL"
>
  <div
    className="sc-AxiKw wDwik"
  >
    <span
      className="sc-AxjAm jnaJRY lni lni-users"
    />
    <h3
      className="sc-AxhCb ICwhD"
    >
      Users
    </h3>
    <div
      className="sc-AxhUy fNfuCs"
    >
      Children textual content
    </div>
  </div>
</div>
`;
